objects/disco__Answer__c.object
<CustomObject>
    <description>A response to a Question for a specific Form</description>
    <fields>
        <fullName>disco__Answer__c</fullName>
        <description>Field to hold the value of the answer within any of the other fields</description>
        <label>Answer</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Check_Intent__c</fullName>
        <formula>disco__Question__r.disco__Check_Intent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Intent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_Sentiment__c</fullName>
        <formula>disco__Question__r.disco__Check_Sentiment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Sentiment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_Vision__c</fullName>
        <formula>disco__Question__r.disco__Check_Vision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Checkbox_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Currency_Answer__c</fullName>
        <label>Currency Answer</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>disco__Date_Answer__c</fullName>
        <description>answer to question if it is date type</description>
        <label>Date Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>disco__Date_Time_Answer__c</fullName>
        <label>Date/Time Answer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__E_Sig_Image_Id__c</fullName>
        <description>Id of the JPG for the E-Signature, if applicable</description>
        <inlineHelpText>Id of the JPG for the E-Signature, if applicable</inlineHelpText>
        <label>E-Sig Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__E_Sig_Image_Link__c</fullName>
        <formula>if ( IsNull(disco__E_Sig_Image_Id__c)||IsBlank(disco__E_Sig_Image_Id__c),null,&apos;/sfc/servlet.shepherd/version/download/&apos;+ disco__E_Sig_Image_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Sig Image Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Email_Answer__c</fullName>
        <description>answer to question if it is email type</description>
        <label>Email Answer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>disco__File_Count__c</fullName>
        <description>Number of files attached for Answers to Attachment Questions. Set by system</description>
        <inlineHelpText>Number of files attached</inlineHelpText>
        <label>File Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Form_Mobile_ID__c</fullName>
        <description>external ID for mobile for the contact form</description>
        <label>Form Mobile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Geolocation_Answer__c</fullName>
        <label>Geolocation Answer</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>disco__Hidden_By_Dep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if the field was shown/hidden based on dependent question logic at the time of save</description>
        <label>Hidden By Dep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Inherited_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies to Answers in Shared Linked Section only.
If checked, this answer was created on a shared linked section from copying values from a Linked Section Record. Deleting such a section should not delete the Linked Section Record as that predates the Answer.

If unchecked on a Shared Linked Section, the answer was created directly on the Form with the Add Section functionality. Deletion of the answers in such a section will also delete the Linked Section Record</description>
        <inlineHelpText>For Answers in Shared Linked Sections, indicates that the Answer was inherited from a pre-existing record.</inlineHelpText>
        <label>Inherited Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Intent_Category__c</fullName>
        <label>Intent Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Intent_Model__c</fullName>
        <formula>disco__Question__r.disco__Intent_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intent Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Intent_Probability__c</fullName>
        <label>Intent Probability</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__LS_Status__c</fullName>
        <description>Indicates the status of the Linked Section relation the last time the record was saved. Broken indicates that the Linked Record was deleted outside of the Form, New that the record was added through the Form and Inherited that the Linked Record was inherited onto the Form</description>
        <label>LS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>broken</fullName>
                </value>
                <value>
                    <fullName>inherited</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Link_Object__c</fullName>
        <description>field link object</description>
        <formula>disco__Question__r.disco__Link_Object__c</formula>
        <inlineHelpText>field link object</inlineHelpText>
        <label>Link Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_Record_Id__c</fullName>
        <description>ID of related record through field link relationship</description>
        <inlineHelpText>ID of related record through field link relationship</inlineHelpText>
        <label>Link Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Order__c</fullName>
        <description>order of answer in a linked section. The section number in case of multiple tasks lists in carried after the decimal point.</description>
        <inlineHelpText>order of answer in a linked section</inlineHelpText>
        <label>Linked Section Order</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Linked_Section_Record_ID__c</fullName>
        <description>If the answer is part of a repeating section, the ID of the record in the repeating section</description>
        <externalId>true</externalId>
        <label>Linked Section Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Long_Text_Answer__c</fullName>
        <label>Long Text Answer</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_Answer__c</fullName>
        <label>Lookup Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_ID__c</fullName>
        <description>record ID for lookup field links</description>
        <inlineHelpText>record ID for lookup field links</inlineHelpText>
        <label>Lookup ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>external ID for mobile</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>disco__Number_Answer__c</fullName>
        <label>Number Answer</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Percent_Answer__c</fullName>
        <label>Percent Answer</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>disco__Phone_Answer__c</fullName>
        <label>Phone Answer</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>disco__Question_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Value</label>
        <referenceTo>disco__Question_Value__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>disco__Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Sentiment_Category__c</fullName>
        <label>Sentiment Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Sentiment_Probability__c</fullName>
        <label>Sentiment Probability</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Text_Answer__c</fullName>
        <description>answer to question if it is text type</description>
        <label>Text Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__URL_Answer__c</fullName>
        <label>URL Answer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>disco__Vision_Model__c</fullName>
        <formula>disco__Question__r.disco__Vision_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Model</label>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>